--- a/android/app/src/main/res/layout/fragment_detail_stats.xml
+++ b/android/app/src/main/res/layout/fragment_detail_stats.xml
@@ -92,6 +92,39 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_white_radius_12dp"
+                android:paddingBottom="20dp"
+                app:layout_constraintTop_toBottomOf="@id/constraint_vs_team_winning_percentage">
+
+                <TextView
+                    android:id="@+id/tv_stadium_visit_counts"
+                    style="@style/TextView.Pretendard.Bold.20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:paddingHorizontal="20dp"
+                    android:paddingTop="20dp"
+                    android:text="구장 방문 횟수"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/bar_chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_marginTop="4dp"
+                    android:paddingBottom="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_stadium_visit_counts" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
