--- a/android/app/src/main/res/layout/fragment_edit_nickname_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_edit_nickname_confirm.xml
@@ -4,7 +4,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_edit_nickname_title"
