--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -113,4 +113,28 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+
+    <!-- Material Button-->
+    <style name="Widget.App.Button" parent="Widget.Material3.Button">
+        <item name="cornerRadius">12dp</item>
+    </style>
+
+    <style name="Widget.App.Button.Positive" parent="Widget.App.Button">
+        <item name="android:backgroundTint">@color/primary500</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Widget.App.Button.Positive.Pretendard.Medium" parent="Widget.App.Button.Positive">
+        <item name="android:fontFamily">@font/pretendard_medium</item>
+    </style>
+
+    <style name="Widget.App.Button.Negative" parent="Widget.App.Button">
+        <item name="android:backgroundTint">@color/primary050</item>
+        <item name="android:textColor">@color/primary700</item>
+    </style>
+
+    <style name="Widget.App.Button.Negative.Pretendard.Medium" parent="Widget.App.Button.Negative">
+        <item name="android:fontFamily">@font/pretendard_medium</item>
+    </style>
+
 </resources>
