--- a/android/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/android/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,12 +9,12 @@
         android:icon="@drawable/ic_stats"
         android:title="@string/bottom_navigation_stats" />
     <item
+        android:id="@+id/item_attendance_history"
+        android:icon="@drawable/ic_attendance_history"
+        android:title="@string/bottom_navigation_attendance_history" />
+    <item
         android:id="@+id/item_livetalk"
         android:icon="@drawable/ic_livetalk"
         android:title="@string/bottom_navigation_livetalk" />
-    <item
-        android:id="@+id/item_challenge"
-        android:icon="@drawable/ic_challenge"
-        android:title="@string/bottom_navigation_challenge" />
 
 </menu>
