refactor: 직관 내역 BottomNavigation 분리 및 상세 통계 Fragment 추가

--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
-        tools:context=".presentation.stats.attendance.AttendanceHistoryFragment">
+        tools:context=".presentation.attendance.AttendanceHistoryFragment">
 
         <TextView
             android:id="@+id/tv_attendance_history_title"
