feat: 직관 내역 정렬 UI 추가

--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -6,17 +6,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
+        android:paddingHorizontal="20dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="12dp"
         tools:context=".presentation.attendance.AttendanceHistoryFragment">
-
-        <TextView
-            android:id="@+id/tv_attendance_history_title"
-            style="@style/TextView.Pretendard.Bold.20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/stats_attendance_history_title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
             android:id="@+id/spinner_attendance_history_filter"
@@ -26,18 +19,39 @@
             android:overlapAnchor="false"
             android:paddingEnd="20dp"
             android:spinnerMode="dropdown"
-            app:layout_constraintBottom_toBottomOf="@id/tv_attendance_history_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_attendance_history_title" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_spinner_arrow"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/ic_arrow_down"
             app:layout_constraintBottom_toBottomOf="@id/spinner_attendance_history_filter"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/spinner_attendance_history_filter"
             app:layout_constraintTop_toTopOf="@id/spinner_attendance_history_filter"
+            app:tint="@color/gray500" />
+
+        <TextView
+            android:id="@+id/tv_attendance_history_sort"
+            style="@style/TextView.Pretendard.Regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:textColor="@color/gray500"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/spinner_attendance_history_filter"
+            app:layout_constraintEnd_toStartOf="@id/iv_attendance_history_switch"
+            app:layout_constraintTop_toTopOf="@id/spinner_attendance_history_filter"
+            tools:text="최신순" />
+
+        <ImageView
+            android:id="@+id/iv_attendance_history_switch"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_switch"
+            app:layout_constraintBottom_toBottomOf="@id/tv_attendance_history_sort"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_attendance_history_sort"
             app:tint="@color/gray500" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -47,7 +61,7 @@
             android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_attendance_history_title" />
+            app:layout_constraintTop_toBottomOf="@id/spinner_attendance_history_filter" />
 
         <TextView
             android:id="@+id/tv_empty_history"
