--- a/android/app/src/main/res/layout/item_attendance_history.xml
+++ b/android/app/src/main/res/layout/item_attendance_history.xml
@@ -15,92 +15,336 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:background="@drawable/bg_white_radius_12dp"
-        android:padding="24dp">
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="24dp">
 
-        <TextView
-            style="@style/TextView.Esamanru.Bold"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_attendance_history_summary"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(attendanceHistoryItem.awayTeam.score)}"
-            android:textSize="56dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:textColorRes="@{attendanceHistoryItem.awayTeamColorRes}"
-            tools:text="9"
-            tools:textColor="@color/team_kia" />
+            android:paddingHorizontal="4dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_away_team_name"
-            style="@style/TextView.Pretendard.SemiBold.20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="6dp"
-            android:text="@{attendanceHistoryItem.awayTeam.name}"
-            app:layout_constraintEnd_toStartOf="@id/tv_vs"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="KIA" />
+            <TextView
+                style="@style/TextView.Esamanru.Bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{String.valueOf(attendanceHistoryItem.awayTeam.score)}"
+                android:textSize="56dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:textColorRes="@{attendanceHistoryItem.awayTeamColorRes}"
+                tools:text="9"
+                tools:textColor="@color/team_kia" />
 
-        <TextView
-            android:id="@+id/tv_vs"
-            style="@style/TextView.Pretendard.SemiBold.16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="vs"
-            app:layout_constraintBottom_toBottomOf="@id/tv_away_team_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_away_team_name" />
+            <TextView
+                android:id="@+id/tv_away_team_name"
+                style="@style/TextView.Pretendard.SemiBold.20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
+                android:text="@{attendanceHistoryItem.awayTeam.name}"
+                app:layout_constraintEnd_toStartOf="@id/tv_vs"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="KIA" />
 
-        <TextView
-            android:id="@+id/tv_home_team_name"
-            style="@style/TextView.Pretendard.SemiBold.20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:text="@{attendanceHistoryItem.homeTeam.name}"
-            app:layout_constraintStart_toEndOf="@id/tv_vs"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="두산" />
+            <TextView
+                android:id="@+id/tv_vs"
+                style="@style/TextView.Pretendard.SemiBold.16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="vs"
+                app:layout_constraintBottom_toBottomOf="@id/tv_away_team_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tv_away_team_name" />
 
-        <TextView
-            android:id="@+id/tv_attendance_date"
-            style="@style/TextView.Pretendard.Regular.12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/gray500"
-            app:dateFormat="@{attendanceHistoryItem.attendanceDate}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_away_team_name"
-            tools:text="2025.08.01" />
+            <TextView
+                android:id="@+id/tv_home_team_name"
+                style="@style/TextView.Pretendard.SemiBold.20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:text="@{attendanceHistoryItem.homeTeam.name}"
+                app:layout_constraintStart_toEndOf="@id/tv_vs"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="두산" />
 
-        <TextView
-            android:id="@+id/tv_stadium_name"
-            style="@style/TextView.Pretendard.Regular"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{attendanceHistoryItem.stadiumName}"
-            android:textColor="@color/gray500"
-            android:textSize="10sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_attendance_date"
-            tools:text="잠실 야구장" />
+            <TextView
+                android:id="@+id/tv_attendance_date"
+                style="@style/TextView.Pretendard.Regular.12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/gray500"
+                app:dateFormat="@{attendanceHistoryItem.attendanceDate}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_away_team_name"
+                tools:text="2025.08.01" />
 
-        <TextView
-            style="@style/TextView.Esamanru.Bold"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_stadium_name"
+                style="@style/TextView.Pretendard.Regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{attendanceHistoryItem.stadiumName}"
+                android:textColor="@color/gray500"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_attendance_date"
+                tools:text="잠실 야구장" />
+
+            <TextView
+                style="@style/TextView.Esamanru.Bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{String.valueOf(attendanceHistoryItem.homeTeam.score)}"
+                android:textSize="56dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:textColorRes="@{attendanceHistoryItem.homeTeamColorRes}"
+                tools:text="5"
+                tools:textColor="@color/team_doosan" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_attendance_history_detail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(attendanceHistoryItem.homeTeam.score)}"
-            android:textSize="56dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:textColorRes="@{attendanceHistoryItem.homeTeamColorRes}"
-            tools:text="5"
-            tools:textColor="@color/team_doosan" />
+            app:layout_constraintTop_toBottomOf="@id/constraint_attendance_history_summary">
+
+            <TableLayout
+                android:id="@+id/table_scoreboard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:stretchColumns="0,2,3,4,5,6,7,8,9,10,11,12,14"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.4dp"
+                    android:background="@color/gray300" />
+
+                <!-- 헤더 행 -->
+                <TableRow>
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="팀명" />
+
+                    <View
+                        android:layout_width="0.4dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray300" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="1" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="2" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="3" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="4" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="5" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="6" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="7" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="8" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="9" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="10" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="11" />
+
+                    <View
+                        android:layout_width="0.4dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray300" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Header"
+                        android:text="R" />
+                </TableRow>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.4dp"
+                    android:background="@color/gray300" />
+
+                <!-- 원정팀 행 -->
+                <TableRow>
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="KIA" />
+
+                    <View
+                        android:layout_width="0.4dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray300" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="1" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="4" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="2" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="2" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="-" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="-" />
+
+                    <View
+                        android:layout_width="0.4dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray300" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="9" />
+                </TableRow>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.4dp"
+                    android:background="@color/gray300" />
+
+                <!-- 홈팀 행 -->
+                <TableRow>
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="두산" />
+
+                    <View
+                        android:layout_width="0.4dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray300" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="2" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="1" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="1" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="1" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="0" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="-" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="-" />
+
+                    <View
+                        android:layout_width="0.4dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/gray300" />
+
+                    <TextView
+                        style="@style/TextView.Scoreboard.Body"
+                        android:text="5" />
+                </TableRow>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.4dp"
+                    android:background="@color/gray300" />
+            </TableLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
