--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -105,4 +105,21 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="TextView.Scoreboard.Header" parent="TextView">
+        <item name="android:background">@color/primary050</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
+    <style name="TextView.Scoreboard.Body" parent="TextView">
+        <item name="android:fontFamily">@font/pretendard_medium</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14dp</item>
+    </style>
+
 </resources>
