--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -111,7 +111,7 @@
         <item name="android:gravity">center</item>
         <item name="android:padding">4dp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">12dp</item>
+        <item name="android:textSize">10dp</item>
     </style>
 
     <style name="TextView.Scoreboard.Body" parent="TextView">
@@ -119,7 +119,25 @@
         <item name="android:gravity">center</item>
         <item name="android:padding">4dp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
+    <style name="TextView.Record.Title" parent="TextView">
+        <item name="android:fontFamily">@font/pretendard_medium</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:paddingVertical">8dp</item>
+        <item name="android:textColor">@color/primary900</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
+    <style name="TextView.Record.Content" parent="TextView">
+        <item name="android:fontFamily">@font/pretendard_medium</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:paddingVertical">8dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12dp</item>
     </style>
 
 </resources>
