--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -18,105 +18,16 @@
         android:paddingHorizontal="20dp"
         android:paddingVertical="24dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraint_attendance_history_summary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="4dp"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                style="@style/TextView.Esamanru.Bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{String.valueOf(attendanceHistoryItem.awayTeam.score)}"
-                android:textSize="56dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:textColorRes="@{attendanceHistoryItem.awayTeamColorRes}"
-                tools:text="9"
-                tools:textColor="@color/team_kia" />
-
-            <TextView
-                android:id="@+id/tv_away_team_name"
-                style="@style/TextView.Pretendard.SemiBold.20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="6dp"
-                android:text="@{attendanceHistoryItem.awayTeam.name}"
-                app:layout_constraintEnd_toStartOf="@id/tv_vs"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="KIA" />
-
-            <TextView
-                android:id="@+id/tv_vs"
-                style="@style/TextView.Pretendard.SemiBold.16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="vs"
-                app:layout_constraintBottom_toBottomOf="@id/tv_away_team_name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tv_away_team_name" />
-
-            <TextView
-                android:id="@+id/tv_home_team_name"
-                style="@style/TextView.Pretendard.SemiBold.20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:text="@{attendanceHistoryItem.homeTeam.name}"
-                app:layout_constraintStart_toEndOf="@id/tv_vs"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="두산" />
-
-            <TextView
-                android:id="@+id/tv_attendance_date"
-                style="@style/TextView.Pretendard.Regular.12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textColor="@color/gray500"
-                app:dateFormat="@{attendanceHistoryItem.attendanceDate}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_away_team_name"
-                tools:text="2025.08.01" />
-
-            <TextView
-                android:id="@+id/tv_stadium_name"
-                style="@style/TextView.Pretendard.Regular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{attendanceHistoryItem.stadiumName}"
-                android:textColor="@color/gray500"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_attendance_date"
-                tools:text="잠실 야구장" />
-
-            <TextView
-                style="@style/TextView.Esamanru.Bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{String.valueOf(attendanceHistoryItem.homeTeam.score)}"
-                android:textSize="56dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:textColorRes="@{attendanceHistoryItem.homeTeamColorRes}"
-                tools:text="5"
-                tools:textColor="@color/team_doosan" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/layout_attendance_history"
+            layout="@layout/layout_attendance_history"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_attendance_history_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/constraint_attendance_history_summary">
+            app:layout_constraintTop_toBottomOf="@id/layout_attendance_history">
 
             <TextView
                 android:id="@+id/tv_away_team_pitcher"
