--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -3,13 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="attendanceHistoryItem"
-            type="com.yagubogu.presentation.attendance.AttendanceHistoryItem" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,10 +29,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="20dp"
-                android:text="승 - 이의리"
+                android:text="@string/attendance_history_winning_pitcher"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="승 - 이의리" />
 
             <TextView
                 android:id="@+id/tv_home_team_pitcher"
@@ -47,11 +41,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
-                android:text="패 - 김택연"
+                android:text="@string/attendance_history_losing_pitcher"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_away_team_pitcher"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tv_away_team_pitcher" />
+                app:layout_constraintTop_toTopOf="@id/tv_away_team_pitcher"
+                tools:text="패 - 김택연" />
 
             <TableLayout
                 android:id="@+id/table_scoreboard"
@@ -72,7 +67,7 @@
 
                     <TextView
                         style="@style/TextView.Scoreboard.Header"
-                        android:text="팀명" />
+                        android:text="@string/attendance_history_team_name" />
 
                     <View
                         android:layout_width="0.4dp"
@@ -306,7 +301,7 @@
 
                     <TextView
                         style="@style/TextView.Record.Title"
-                        android:text="팀 기록" />
+                        android:text="@string/attendance_history_team_record" />
 
                     <TextView
                         style="@style/TextView.Pretendard.Regular"
@@ -330,7 +325,7 @@
 
                     <TextView
                         style="@style/TextView.Record.Title"
-                        android:text="안타" />
+                        android:text="@string/attendance_history_hit" />
 
                     <TextView
                         style="@style/TextView.Record.Content"
@@ -351,7 +346,7 @@
 
                     <TextView
                         style="@style/TextView.Record.Title"
-                        android:text="실책" />
+                        android:text="@string/attendance_history_error" />
 
                     <TextView
                         style="@style/TextView.Record.Content"
@@ -372,7 +367,7 @@
 
                     <TextView
                         style="@style/TextView.Record.Title"
-                        android:text="사사구" />
+                        android:text="@string/attendance_history_ball" />
 
                     <TextView
                         style="@style/TextView.Record.Content"
