--- a/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
+++ b/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/bg_white_radius_16dp"
         android:padding="12dp">
 
