--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -49,11 +49,24 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_attendance_history_title" />
 
+        <ImageView
+            android:id="@+id/iv_empty_history"
+            android:layout_width="wrap_content"
+            android:layout_height="140dp"
+            android:contentDescription="@string/stats_empty_scoreboard_illustration_description"
+            android:src="@drawable/img_baseball_scoreboard"
+            app:layout_constraintBottom_toTopOf="@id/tv_empty_history"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
+
         <TextView
             android:id="@+id/tv_empty_history"
             style="@style/TextView.Pretendard.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:lineSpacingExtra="8dp"
             android:text="@string/stats_empty_attendance_history_description"
@@ -62,6 +75,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/iv_empty_history"
+            app:layout_constraintVertical_chainStyle="packed" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
