--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:background="@drawable/bg_white_radius_12dp"
+        android:onClick="@{() -> handler.onItemClick(attendanceHistoryItem)}"
         android:paddingHorizontal="20dp"
         android:paddingVertical="24dp">
 
