--- a/android/app/src/main/res/layout/fragment_livetalk.xml
+++ b/android/app/src/main/res/layout/fragment_livetalk.xml
@@ -24,11 +24,13 @@
             android:layout_height="250dp"
             android:contentDescription="@string/livetalk_empty_game_illustration_description"
             android:src="@drawable/img_baseball_fly_error"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/tv_empty_game"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_empty_game"
@@ -41,11 +43,13 @@
             android:text="@string/livetalk_empty_game_description"
             android:textColor="@color/gray400"
             android:textSize="18sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_empty_game"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
