--- a/android/app/src/main/res/layout/fragment_detail_stats.xml
+++ b/android/app/src/main/res/layout/fragment_detail_stats.xml
@@ -35,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="20dp"
-                    android:text="VS 팀 승률"
+                    android:text="@string/stats_vs_team_winning_percentage"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,7 +108,7 @@
                     android:layout_marginTop="4dp"
                     android:paddingHorizontal="20dp"
                     android:paddingTop="20dp"
-                    android:text="구장 방문 횟수"
+                    android:text="@string/stats_stadium_visit_count"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
