feat: 설정 아이콘 onClick 속성 제거와 contentDescription 추가

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center_vertical|end"
-                android:onClick=""
+                android:contentDescription="@string/setting_icon_description"
                 android:src="@drawable/ic_settings" />
         </androidx.appcompat.widget.Toolbar>
 
