fix: 기본 다이얼로그 확인 버튼 텍스트 변경

--- a/android/app/src/main/res/layout/fragment_default_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_default_confirm.xml
@@ -70,7 +70,7 @@
             android:gravity="center"
             android:paddingHorizontal="40dp"
             android:paddingVertical="12dp"
-            android:text="@{dialogDefaultUiModel.positiveText==null ? @string/all_ok : dialogDefaultUiModel.positiveText}"
+            android:text="@{dialogDefaultUiModel.positiveText==null ? @string/all_confirm : dialogDefaultUiModel.positiveText}"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
             app:layout_constraintEnd_toEndOf="parent"
